--- a/manifests/db-service.yaml
+++ b/manifests/db-service.yaml
@@ -2,17 +2,17 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: kompose convert -f docker-compose.yaml
-    kompose.version: 1.26.1 (a9d05d509)
+    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yaml
+    kompose.version: 1.21.0 (992df58d8)
   creationTimestamp: null
   labels:
     io.kompose.service: db
   name: db
 spec:
   ports:
-    - name: "3306"
-      port: 3306
-      targetPort: 3306
+  - name: "3306"
+    port: 3306
+    targetPort: 3306
   selector:
     io.kompose.service: db
 status:
