--- a/manifests/phpmyadmin-service.yaml
+++ b/manifests/phpmyadmin-service.yaml
@@ -2,17 +2,17 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: kompose convert -f docker-compose.yaml
-    kompose.version: 1.26.1 (a9d05d509)
+    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yaml
+    kompose.version: 1.21.0 (992df58d8)
   creationTimestamp: null
   labels:
     io.kompose.service: phpmyadmin
   name: phpmyadmin
 spec:
   ports:
-    - name: "5000"
-      port: 5000
-      targetPort: 80
+  - name: "5000"
+    port: 5000
+    targetPort: 80
   selector:
     io.kompose.service: phpmyadmin
 status:
