--- a/manifests/web-server-deployment.yaml
+++ b/manifests/web-server-deployment.yaml
@@ -2,8 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    kompose.cmd: kompose convert -f docker-compose.yaml
-    kompose.version: 1.26.1 (a9d05d509)
+    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yaml
+    kompose.version: 1.21.0 (992df58d8)
   creationTimestamp: null
   labels:
     io.kompose.service: web-server
@@ -17,17 +17,20 @@ spec:
   template:
     metadata:
       annotations:
-        kompose.cmd: kompose convert -f docker-compose.yaml
-        kompose.version: 1.26.1 (a9d05d509)
+        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yaml
+        kompose.version: 1.21.0 (992df58d8)
       creationTimestamp: null
       labels:
         io.kompose.service: web-server
     spec:
       containers:
-        - image: mhjkeee/crudback
-          name: web-server
-          ports:
-            - containerPort: 80
-          resources: {}
+      - image: ivan47/php
+        imagePullPolicy: ""
+        name: web-server
+        ports:
+        - containerPort: 80
+        resources: {}
       restartPolicy: Always
+      serviceAccountName: ""
+      volumes: null
 status: {}
